--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 
 body {
     background-color: lightgray;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI';
 }
 
 h1 {
@@ -24,7 +24,6 @@ h2 {
     background-color: rgb(98, 145, 118);
     font-weight: 800;
     font-size: larger;
-    height: 5%;
     padding: 20px;
 }
 
